aligned ads,  corrected navbar menu overlay issue

--- a/src/index.css
+++ b/src/index.css
@@ -1099,39 +1099,26 @@ fieldset:disabled .claybtn {
     position: relative;
     background-color: rgba(112, 112, 23, 0);
   }
-
-  .popup2 {
+  .popup3 {
     position: absolute;
     z-index: 4206969;
-    top: -60px;
-    left: 25px;
-    width: 100%;
-    height: 110vh;
+    top: 22px;
+    left: 650px;
+    width: 500px;
+    height: 500px;
     background-color: rgba(137, 43, 226, 0);
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
   
-  .popup-inner2 {
+
+  .popup-inner3 {
     position: relative;
     background-color: rgba(112, 112, 23, 0);
   }
+
   
-  .popup-inner2 .close-btn2 {
-    position: absolute;
-    top: 9px;
-    right: 25px;
-    color: rgba(255, 255, 255, 0.979);
-    background-color: #dd6e0a;
-    border-radius: 12px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    padding: 10px 24px;
-    font-size: 18px;
-    transition: 0.4s ease;
-  }
   .payoutinfo2 {
 
     background: rgba(27, 11, 41, 0.2);
@@ -1230,6 +1217,18 @@ fieldset:disabled .claybtn {
     justify-content: center;
     align-items: center;
 }
+.popup3 {
+  position: absolute;
+  z-index: 4206969;
+  top: 29px;
+  left: -29px;
+  width: 100%;
+  height: 110vh;
+  background-color: rgba(137, 43, 226, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
   .logo {
@@ -1245,13 +1244,15 @@ fieldset:disabled .claybtn {
 
   .navbar-collapse {
     background: rgba(50, 13, 133, 0.8);
+    left: 10px;
+    -webkit-backdrop-filter: blur(80px);
     backdrop-filter: blur(80px);
     min-width: calc(100% + var(--bs-gutter-x) * 0.5);
     margin-left: calc(-1 * (var(--bs-gutter-x) * 0.75));
-    padding: 10px 10px 20px;
-    position: absolute;
-    top: 58px;
-  }
+    padding: 15px 117px 30px;
+    /* position: absolute; */
+    /* top: 58px; */
+}
 
   /* .header .menu {
     display: none !important;
@@ -1298,6 +1299,10 @@ fieldset:disabled .claybtn {
   
 
   .popup-inner {
+    position: relative;
+    background-color: rgba(112, 112, 23, 0);
+  }
+  .popup-inner3 {
     position: relative;
     background-color: rgba(112, 112, 23, 0);
   }
@@ -1375,17 +1380,7 @@ fieldset:disabled .claybtn {
     border-right: none;
   }
 
-  .popup-inner2 {
-    display: none;
-  }
-
-  .peachframe {
-    display: none;
-    width: 100px;
-    height: 768px;
-  }
-
-
+  
 
   .claybtn2E {
     display: none;
@@ -1541,7 +1536,6 @@ fieldset:disabled .claybtn {
   display: flex;
   align-items: center;
   justify-content: center;
-
   color: #fcfcfc;
   background-color: #dd6e0a;
   width: 120px;
@@ -1554,6 +1548,7 @@ fieldset:disabled .claybtn {
     inset -10px -10px 18px 0 rgb(0 0 0 / 30%); */
   transition: 0.4s ease;
   text-align: center;
+  font-size: 75%;
 }
 
 .claybtn2E {
@@ -1783,6 +1778,13 @@ fieldset:disabled .claybtn {
     inset -10px -10px 18px 0 rgba(0, 0, 0, 0.3);
   transition: 0.4s ease;
 }
+.Adspace {
+  width: 320px;
+  height: 50px;
+  background: #dd6c0a00;
+  margin-left: 100px;
+  margin-top: 4px;
+}
 
 .Adspace1 {
   width: 320px;
@@ -1804,8 +1806,16 @@ fieldset:disabled .claybtn {
   width: 970px;
   height: 16px;
   background: #dd6c0a00;
-  margin-left: 397px;
-  margin-top: -10px;
+  margin-left: 504px;
+  /* margin-top: -3px; */
+  padding-top: 15px;
+}
+.mobilead1 {
+  width: 320px;
+  height: 50px;
+  background: #dd6c0a00;
+  margin-left: 45px;
+  margin-top: 4px;
 }
 
 .peachframe {
@@ -1818,6 +1828,25 @@ fieldset:disabled .claybtn {
 }
 
 .close-btn {
+  position: absolute;
+  text-align: center;
+  width: 45px;
+  height: 25px;
+  top: 10px;
+  right: 6px;
+  color: rgba(255, 255, 255, 0.979);
+  background-color: #dd6e0a;
+  border-radius: 10rem;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 16px;
+  font-size: 14px;
+  box-shadow: 10px 10px 18px 0 rgba(0, 0, 0, 0.3),
+    inset -10px -10px 18px 0 rgba(0, 0, 0, 0.3);
+  transition: 0.4s ease;
+}
+.close-btn3 {
   position: absolute;
   text-align: center;
   width: 45px;
@@ -1853,44 +1882,10 @@ fieldset:disabled .claybtn {
     inset -10px -10px 18px 0 rgba(0, 0, 0, 0.3);
   transition: 0.4s ease;
 }
-
-/* .popup2 {
+.popup-inner3 {
   position: absolute;
-  z-index: 4206969;
-  top: -60px;
-  left: 25px;
-  width: 100%;
-  height: 110vh;
-  background-color: rgba(137, 43, 226, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup-inner2 {
-  position: relative;
-  background-color: rgba(112, 112, 23, 0);
-}
-
-.popup-inner2 .close-btn2 {
-  position: absolute;
-  top: 9px;
-  right: 25px;
-  color: rgba(255, 255, 255, 0.979);
-  background-color: #dd6e0a;
-  border-radius: 12px;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  padding: 10px 24px;
-  font-size: 18px;
-  transition: 0.4s ease;
-} */
-
-.popup-inner2Mbl .close-btn2Mbl {
-  position: absolute;
-  top: -px;
-  right: 8px;
+  top: 10px;
+  right: -4px;
   color: rgba(255, 255, 255, 0.979);
   background-color: #dd6e0a;
   border-radius: 10rem;
@@ -1898,11 +1893,16 @@ fieldset:disabled .claybtn {
   border: none;
   outline: none;
   border-radius: 16px;
-  font-size: 17px;
+  font-size: 24px;
   box-shadow: 10px 10px 18px 0 rgba(0, 0, 0, 0.3),
     inset -10px -10px 18px 0 rgba(0, 0, 0, 0.3);
   transition: 0.4s ease;
 }
+
+.rewardstext {
+  font-size: smaller;
+}
+
 
 
 .claybtnmini {
